--- a/style-mobile.css
+++ b/style-mobile.css
@@ -131,7 +131,7 @@
         gap: var(--mobile-spacing-lg);
         max-width: 97%;
         height: auto;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         align-items: center;
     }
 
@@ -172,20 +172,21 @@
 .shops-grid .shop-card-grid h4.shop-card-header {
     font-size: var(--mobile-font-md); /* 12px через переменную */
     font-weight: 200;                 /* Тонкий шрифт */
-    line-height: 0.5;
+    line-height: 1;
     margin-bottom: var(--mobile-spacing-lg); /* 8px через переменную */
     text-align: left;                /* ВАЖНО: прибит к левому краю */
     display: flex;
-    align-items: center;
+    align-items: left;
     justify-content: flex-start;     /* Выравнивание по левому краю */
     width: 100%;                     /* Занимает всю ширину */
-    padding-left: 0;                 /* Убираем левый отступ если есть */
+    padding-left: 2px;                 /* Убираем левый отступ если есть */
+    border-radius: 0;
 }
 
     .home-card-desc,
     .option-desc {
         font-size: var(--mobile-font-xs);
-        line-height: 0.5;
+        line-height: 1;
         text-align: center;
     }
 
@@ -212,7 +213,7 @@
     .shop-card-grid .shop-card-content p,
     .shops-grid .shop-card-grid p {
         font-size: var(--mobile-font-sm);
-        line-height: 0.5;
+        line-height: 1;
         margin-bottom: 7px;
         display: flex;
         align-items: center;
