--- a/style-512.css
+++ b/style-512.css
@@ -161,6 +161,11 @@
         display: flex;
         flex: 1;
         width: 100%;
+              border-radius: 0;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+        border-bottom-left-radius: 0;
     }
 
     .shop-card {
@@ -210,6 +215,7 @@
         display: flex;
         flex: 1;
         padding: 4px;
+      
     }
 
     .shop-card-grid i,
@@ -217,6 +223,7 @@
         font-size: 12px;
         margin-right: 6px;
         min-width: 14px;
+        border-radius: 0;
     }
 
     /* Адрес магазина */
